# nimue_discord_bot

./: .replit  Dockerfile  README.md  pyproject.toml  requirements.txt
Nimue/: input_handler.py  main.py
Nimue/Data/: data_commands.csv  data_moves.csv  data_playbooks.csv  data_utils.csv  playbook.py
Nimue/Localization/: localization_utils.csv  localizer.py
Nimue/Localization/Base/: localization_conditions.csv  localization_info.csv  localization_labels.csv  localization_moves.csv  localization_playbooks.csv
Nimue/Localization/Playbooks/: localization_aware_moves.csv  localization_beast_moves.csv  localization_bloody_moves.csv  localization_chosen_moves.csv  localization_devoted_moves.csv  localization_dream_moves.csv  localization_ensemble_moves.csv  localization_fae_moves.csv  localization_hologodess_moves.csv  localization_hunter_moves.csv  localization_imp_moves.csv  localization_investigator_moves.csv  localization_legion_moves.csv  localization_matriarch_moves.csv  localization_naga_moves.csv  localization_nature_moves.csv  localization_oracle_moves.csv  localization_revenant_moves.csv  localization_scoundrel_moves.csv  localization_seeker_moves.csv  localization_spectre_moves.csv  localization_spooky_moves.csv  localization_sun_moves.csv  localization_sworn_moves.csv  localization_tainted_moves.csv  localization_trickster_moves.csv  localization_troubadour_moves.csv  localization_vamp_moves.csv  localization_vessel_moves.csv  localization_veteran_moves.csv  localization_wizard_moves.csv  localization_wolf_moves.csv
Nimue/Managers/: commands_manager.py  data_manager.py  moves_manager.py  playbooks_manager.py  slash_command_manager.py
